--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
         <div class="w-full text-gray-700 bg-gray-100 fixed top-0 z-40">
             <div x-data="{ open: false }" class="py-2 flex flex-col max-w-screen-xl mx-auto md:items-center md:justify-between md:flex-row xl:px-0 lg:px-10 md:px-5 px-5">
                 <div class="p-4 flex flex-row items-center justify-between">
-                    <a href="#" class="text-lg font-semibold tracking-widest text-gray-900 uppercase h-auto w-20 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
+                    <a href="index.html" class="text-lg font-semibold tracking-widest text-gray-900 uppercase h-auto w-20 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
                         <h1 class="text-gray-800 font-rubic dark:text-gray-800">Logo</h1>
                     </a>
                     <div class="md:ml-1 lg:ml-36 xl:ml-56">
@@ -100,18 +100,18 @@
                     >
                         Login
                     </a>
-                <a
-                    class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="contact.html"
-                >
-                    Contact us
-                </a>
-                <a
-                class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                href="About.html"
-            >
-                About us
-            </a>
+                    <a
+                        class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                        href="contact.html"
+                    >
+                        Contact us
+                    </a>
+                    <a
+                        class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                        href="About.html"
+                    >
+                        About us
+                    </a>
                     <div @click.away="open = false" class="relative" x-data="{ open: false }">
                         <button
                             @click="open = !open"
@@ -161,31 +161,33 @@
         <div class="container-fluid py-20 mt-20 dark:bg-gray-800">
             <div class="container mx-auto">
                 <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto">
-                    <div class="xl:grid xl:grid-cols-2 xl:grid-rows-1 gap-4 items-center">
+                    <div class="xl:grid xl:grid-cols-2 xl:grid-rows-1 lg:grid lg:grid-cols-2 lg:grid-rows-1 gap-4 items-center">
                         <div class="overflow-hidden w-full">
-                            <img class="hover:scale-125 transform transition duration-700 ease-in-out w-full hover:opacity-75" src="images/1 (1).jpg" alt="">
+                            <img class="hover:scale-125 transform transition duration-700 ease-in-out w-full hover:opacity-75" src="images/1 (1).jpg" alt="" />
                         </div>
-                        <div class="xl:mx-10 lg:mx-10">
+                        <div class="xl:ml-10 lg:ml-10 xl:mt-0 lg:mt-0 mt-10">
                             <h2 class="text-pink-600 text-lg pb-3 font-rubic dark:text-white">FLowers for the</h2>
-                            <h1 class="uppercase text-gray-900 text-4xl pb-2 font-medium dark:text-white">Birthday & GIft</h1>
+                            <h1 class="uppercase text-gray-900 text-lg xl:text-4xl lg:text-2xl md:text-xl pb-2 font-medium dark:text-white">Birthday & GIft</h1>
                             <p class="text-sm text-gray-500 pb-5 dark:text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                             <div class="">
                                 <a href="#" class="bg-gray-900 text-white font-semibold px-4 py-3 rounded hover:bg-red-600 hover:text-white transition duration-300 ease-in-out">Shop Collection</a>
                             </div>
                         </div>
+                        
                     </div>
 
-                    <div class="xl:grid xl:grid-cols-2 xl:grid-rows-1 gap-4 items-center mt-20">
-                        <div class="xl:mx-10 lg:mx-10">
+                    <div class="xl:grid xl:grid-cols-2 xl:grid-rows-1 lg:grid lg:grid-cols-2 lg:grid-rows-1 gap-4 items-center mt-20">
+                        
+                        <div class="xl:mr-10 lg:mr-10 xl:mb-0 lg:mb-0 mb-12">
                             <h2 class="text-pink-600 text-lg pb-3 font-rubic dark:text-white">FLowers for the</h2>
-                            <h1 class="uppercase text-gray-900 text-4xl pb-2 font-medium dark:text-white">WEDDING DAY</h1>
+                            <h1 class="uppercase text-gray-900 text-lg xl:text-4xl lg:text-2xl md:text-xl pb-2 font-medium dark:text-white">WEDDING DAY</h1>
                             <p class="text-sm text-gray-500 pb-5 dark:text-gray-300">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                             <div class="">
                                 <a href="#" class="bg-gray-900 text-white font-semibold px-4 py-3 rounded hover:bg-red-600 hover:text-white transition duration-300 ease-in-out">Shop Collection</a>
                             </div>
                         </div>
                         <div class="overflow-hidden w-full">
-                            <img class="hover:scale-125 transform transition duration-700 ease-in-out w-full hover:opacity-75" src="images/2.jpg" alt="">
+                            <img class="hover:scale-125 transform transition duration-700 ease-in-out w-full hover:opacity-75" src="images/2.jpg" alt="" />
                         </div>
                     </div>
                 </div>
@@ -193,11 +195,14 @@
         </div>
         <div class="container-fluid bg-gray-50 dark:bg-gray-900">
             <div class="container mx-auto">
-                <div class="max-w-3xl text-center py-20 mx-auto">
-                    <h2 class="text-lg pb-3 font-rubic dark:text-white text-pink-600 dark:text-white">A little story about us</h2>
-                    <h1 class="text-gray-800 text-7xl pb-8 dark:text-white">Our History</h1>
-                    <h1 class="text-gray-700 font-semibold text-xl dark:text-white">Captain America: Civil War Christopher Markus and Stephen McFeely see the Hulk as the game over moment.</h1>
-                    <p class="text-gray-600 py-6 text-xl dark:text-gray-400 leading-relaxed">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus. Phasellus eu rhoncus dolor, vitae scelerisque sapien</p>
+                <div class="max-w-xs md:max-w-2xl lg:max-w-3xl xl:max-w-3xl mx-auto text-center py-20">
+                    <h2 class="pb-3 font-rubic dark:text-white xl:text-xl lg:text-lg text-sm text-pink-600 dark:text-white">A little story about us</h2>
+                    <h1 class="text-gray-800 xl:text-7xl lg:text-4xl md:text-2xl text-xl pb-8 dark:text-white">Our History</h1>
+                    <h1 class="text-gray-700 font-semibold xl:text-xl lg:text-lg text-sm dark:text-white">Captain America: Civil War Christopher Markus and Stephen McFeely see the Hulk as the game over moment.</h1>
+                    <p class="text-gray-600 py-6 xl:text-xl lg:text-lg text-xs dark:text-gray-400 leading-relaxed">
+                        Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
+                        Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus. Phasellus eu rhoncus dolor, vitae scelerisque sapien
+                    </p>
                 </div>
             </div>
         </div>
@@ -205,77 +210,77 @@
             <div class="container mx-auto">
                 <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto justify-center">
                     <div class="text-center">
-                        <h2 class="text-lg pb-3 font-rubic dark:text-white text-pink-600 dark:text-white">The guys behind the curtains</h2>
-                        <h1 class="font-medium text-2xl text-gray-800">A TEAM OF HIGHLY-SKILLED EXPERTS</h1>
+                        <h2 class="text-sm xl:text-lg lg:text-lg pb-3 font-rubic dark:text-white text-pink-600 dark:text-white">The guys behind the curtains</h2>
+                        <h1 class="font-medium text-sm lg:text-xl xl:text-2xl text-gray-800 dark:text-white">A TEAM OF HIGHLY-SKILLED EXPERTS</h1>
                     </div>
                     <div class="xl:grid xl:grid-rows-1 xl:grid-cols-3 xl:gap-6 md:grid md:grid-rows-2 md:grid-cols-2 md:gap-6 lg:grid lg:grid-rows-1 lg:grid-cols-3 lg:gap-6 py-20">
                         <div class="text-center xl:mt-0 lg:mt-0 md:mt-0 mt-5">
                             <div class="relative max-w-sm mx-auto overflow-hidden">
-                                <img class="w-full" src="images/1 (2).jpg" alt="">
+                                <img class="w-full" src="images/1 (2).jpg" alt="" />
                                 <div class="absolute bottom-0 left-1 flex justify-center w-full items-center inline-block">
                                     <div class="">
-                                        <a href="#" class="px-2 py-2 bg-gray-200"><i class="fab fa-facebook-f text-xl text-pink-600"></i></a>
+                                        <a href="#" class="px-2 py-2 bg-gray-100"><i class="fab fa-facebook-f text-xl text-pink-600"></i></a>
                                     </div>
                                     <div class="">
-                                        <a href="#" class="px-2 py-2 bg-gray-200"><i class="fab fa-twitter text-xl text-pink-600"></i></a>
+                                        <a href="#" class="px-2 py-2 bg-gray-100"><i class="fab fa-twitter text-xl text-pink-600"></i></a>
                                     </div>
                                     <div class="">
-                                        <a href="#" class="px-2 py-2 bg-gray-200"><i class="fab fa-instagram text-xl text-pink-600"></i></a>
+                                        <a href="#" class="px-2 py-2 bg-gray-100"><i class="fab fa-instagram text-xl text-pink-600"></i></a>
                                     </div>
-                                </div>  
+                                </div>
                             </div>
                             <div class="">
-                                <h1 class="text-xl text-gray-800 font-semibold pt-5">Stephen Mearsley</h1>
-                                <p class="text-lg text-gray-600 pt-1 font-medium">President & CEO</p>
+                                <h1 class="text-sm lg:text-xl xl:text-xl text-gray-800 font-semibold pt-5 dark:text-white">Stephen Mearsley</h1>
+                                <p class="text-sm lg:text-lg xl:text-lg text-gray-600 pt-1 font-medium dark:text-white">President & CEO</p>
                             </div>
                         </div>
 
                         <div class="text-center xl:mt-0 lg:mt-0 md:mt-0 mt-5">
                             <div class="relative max-w-sm mx-auto overflow-hidden">
-                                <img class="w-full" src="images/2 (1).jpg" alt="">
+                                <img class="w-full" src="images/2 (1).jpg" alt="" />
                                 <div class="absolute bottom-0 left-1 flex justify-center w-full items-center inline-block">
                                     <div class="">
-                                        <a href="#" class="px-2 py-2 bg-gray-200"><i class="fab fa-facebook-f text-xl text-pink-600"></i></a>
+                                        <a href="#" class="px-2 py-2 bg-gray-100"><i class="fab fa-facebook-f text-xl text-pink-600"></i></a>
                                     </div>
                                     <div class="">
-                                        <a href="#" class="px-2 py-2 bg-gray-200"><i class="fab fa-twitter text-xl text-pink-600"></i></a>
+                                        <a href="#" class="px-2 py-2 bg-gray-100"><i class="fab fa-twitter text-xl text-pink-600"></i></a>
                                     </div>
                                     <div class="">
-                                        <a href="#" class="px-2 py-2 bg-gray-200"><i class="fab fa-instagram text-xl text-pink-600"></i></a>
+                                        <a href="#" class="px-2 py-2 bg-gray-100"><i class="fab fa-instagram text-xl text-pink-600"></i></a>
                                     </div>
-                                </div>  
+                                </div>
                             </div>
                             <div class="">
-                                <h1 class="text-xl text-gray-800 font-semibold pt-5">Maggie Strickland</h1>
-                                <p class="text-lg text-gray-600 pt-1 font-medium">Financial Services</p>
+                                <h1 class="text-sm lg:text-xl xl:text-xl text-gray-800 font-semibold pt-5 dark:text-white">Maggie Strickland</h1>
+                                <p class="text-sm lg:text-lg xl:text-lg text-gray-600 pt-1 font-medium dark:text-white">Financial Services</p>
                             </div>
                         </div>
 
                         <div class="text-center xl:mt-0 lg:mt-0 md:mt-0 mt-5">
                             <div class="relative max-w-sm mx-auto overflow-hidden">
-                                <img class="w-full" src="images/3.jpg" alt="">
+                                <img class="w-full" src="images/3.jpg" alt="" />
                                 <div class="absolute bottom-0 left-1 flex justify-center w-full items-center inline-block">
                                     <div class="">
-                                        <a href="#" class="px-2 py-2 bg-gray-200"><i class="fab fa-facebook-f text-xl text-pink-600"></i></a>
+                                        <a href="#" class="px-2 py-2 bg-gray-100"><i class="fab fa-facebook-f text-xl text-pink-600"></i></a>
                                     </div>
                                     <div class="">
-                                        <a href="#" class="px-2 py-2 bg-gray-200"><i class="fab fa-twitter text-xl text-pink-600"></i></a>
+                                        <a href="#" class="px-2 py-2 bg-gray-100"><i class="fab fa-twitter text-xl text-pink-600"></i></a>
                                     </div>
                                     <div class="">
-                                        <a href="#" class="px-2 py-2 bg-gray-200"><i class="fab fa-instagram text-xl text-pink-600"></i></a>
+                                        <a href="#" class="px-2 py-2 bg-gray-100"><i class="fab fa-instagram text-xl text-pink-600"></i></a>
                                     </div>
-                                </div>  
+                                </div>
                             </div>
                             <div class="">
-                                <h1 class="text-xl text-gray-800 font-semibold pt-5">Dollie Horton</h1>
-                                <p class="text-lg text-gray-600 pt-1 font-medium">Marketing</p>
+                                <h1 class="text-sm lg:text-xl xl:text-xl text-gray-800 font-semibold pt-5 dark:text-white">Dollie Horton</h1>
+                                <p class="text-sm lg:text-lg xl:text-lg text-gray-600 pt-1 font-medium dark:text-white">Marketing</p>
                             </div>
                         </div>
                     </div>
                     <div class="xl:grid xl:grid-cols-2 xl:grid-rows-1 lg:grid lg:grid-cols-2 lg:grid-rows-1 md:grid md:grid-cols-2 md:grid-rows-1 gap-4 py-20">
                         <div class="">
-                            <h1 class="text-gray-800 text-2xl text-medium">SEND NEWSLETTER</h1>
-                            <p class="text-gray-500 text-sm pt-3">Enter Your Email Address For Our Mailing List To Keep Your Self Update</p>
+                            <h1 class="text-gray-800 text-sm lg:text-xl xl:text-2xl text-medium dark:text-white">SEND NEWSLETTER</h1>
+                            <p class="text-gray-500 text-xs lg:text-lg xl:text-lg pt-3 dark:text-white">Enter Your Email Address For Our Mailing List To Keep Your Self Update</p>
                         </div>
                         <div class="xl:flex ld:flex md:flex xl:mt-0 lg:mt-0 mt-10">
                             <input type="text" class="w-full border-t-0 border-l-0 border-r-0 border-1 border-gray-300 h-12" placeholder="email@example.com" />
