--- a/account.html
+++ b/account.html
@@ -61,7 +61,7 @@
         <div class="container-fluid bg-white shadow py-3 w-full fixed top-0">
             <div class="container mx-auto">
                 <div
-                    class="w-full py-4 flex justify-between items-center max-w-md md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto"
+                    class="w-full py-4 flex justify-between items-center max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto"
                     x-data="{ open: false }"
                     class="flex flex-col px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 relative"
                 >
@@ -123,7 +123,7 @@
                     <div>
                         <ul
                             :class="{'flex': open, 'hidden': !open}"
-                            class="leading-loose flex-col flex-grow py-10 md:pb-0 hidden xl:flex-row lg:flex-row xl:inline-flex lg:inline-flex xl:static lg:static absolute left-0 top-20 xl:bg-transparent lg:bg-transparent bg-transparent bg-gray-50 w-full px-16 xl:py-0 lg:py-0 md:py-10"
+                            class="leading-loose flex-col flex-grow py-10 md:pb-0 hidden xl:flex-row lg:flex-row xl:inline-flex lg:inline-flex xl:static lg:static absolute left-0 top-20 xl:bg-transparent lg:bg-transparent bg-transparent bg-gray-50 w-full px-3 xl:py-0 lg:py-0 md:py-10"
                         >
                             <a
                                 href="#"
