--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container-fluid bg-white shadow py-3 w-full fixed top-0">
             <div class="container mx-auto">
                 <div
-                    class="w-full py-4 flex justify-between items-center max-w-md md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto"
+                    class="w-full py-4 flex justify-between items-center max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto"
                     x-data="{ open: false }"
                     class="flex flex-col px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 relative"
                 >
@@ -123,7 +123,7 @@
                     <div>
                         <ul
                             :class="{'flex': open, 'hidden': !open}"
-                            class="leading-loose flex-col flex-grow py-10 md:pb-0 hidden xl:flex-row lg:flex-row xl:inline-flex lg:inline-flex xl:static lg:static absolute left-0 top-20 xl:bg-transparent lg:bg-transparent bg-transparent bg-gray-50 w-full px-16 xl:py-0 lg:py-0 md:py-10"
+                            class="leading-loose flex-col flex-grow py-10 md:pb-0 h-screen xl:h-auto xl:h-auto lg:h-auto w-60 sm:w-80 md:w-96 lg:w-full xl:w-full hidden xl:flex-row lg:flex-row xl:inline-flex lg:inline-flex xl:static lg:static absolute left-0 top-20 xl:bg-transparent lg:bg-transparent bg-transparent bg-gray-50 px-3 xl:py-0 lg:py-0 md:py-10"
                         >
                             <a
                                 href="index.html"
@@ -210,7 +210,7 @@
                                     <i class="fas fa-shopping-cart text-gray-500 mr-7 hover:text-red-600 cursor-pointer transition duration-300 ease-in-out"></i>
                                     <p class="absolute -top-3 right-3 h-4 w-4 bg-red-600 rounded-full text-white flex justify-center items-center text-xs">3</p>
                                 </button>
-                                <ul class="dropdown-content z-10 bg-white absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-10 hidden text-gray-700 pt-1 xl:w-80 lg:w-80 md:w-80 w-80">
+                                <ul class="dropdown-content z-10 bg-white absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-4 hidden text-gray-700 pt-1 xl:w-80 lg:w-80 md:w-80 w-80">
                                     <li class="shadow-lg px-3 py-3 mt-5">
                                         <div class="border-b-2 border-gray-200 pb-5">
                                             <div class="flex justify-between items-center">
