--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container-fluid bg-white shadow py-3 w-full fixed top-0">
             <div class="container mx-auto">
                 <div
-                    class="w-full py-4 flex justify-between items-center max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto"
+                    class="w-full py-4 flex justify-between items-center px-4"
                     x-data="{ open: false }"
                     class="flex flex-col px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8 relative"
                 >
@@ -287,6 +287,25 @@
                                     <i class="fas fa-search text-lg pt-1 hover:text-red-600 text-gray-500 transition duration-300 ease-in-out"></i>
                                 </button>
                             </section>
+                        </div>
+                    </div>
+                    <div class="flex justify-center items-center xl:ml-0 lg:ml-4 md:ml-0 ml-0">
+                        <div class="group">
+                            <div id="demo"></div>
+                            <div class="dropdown inline-block relative group">
+                                <button class="inline-flex items-center focus:outline-none relative flex items-center">
+                                    <img src="images/user.jpeg" class="xl:w-10 lg:w-10 md:w-10 w-8 h-auto rounded-full" alt="image">
+                                    <h1 class="text-gray-600 text-sm font-medium xl:block lg:block md:block hidden ml-2 group-hover:text-red-600 transition duration-300 ease-in-out">John Doe</h1>
+                                </button>
+                                <ul class="dropdown-content z-10 bg-white rounded shadow-lg absolute xl:right-0 lg:right-0 md:right-0 sm:right-0 -right-4 hidden text-gray-700 pt-1 w-44">
+                                    <li class="shadow-lg px-3 py-3 mt-5">
+                                        <h1 class="pb-1 border-b border-gray-300 xl:hidden lg:hidden md:hidden block mb-3 font-semibold">John Doe</h1>
+                                        <div class="py-1"><a href="account.html" class="text-gray-600 font-rubic hover:text-red-600 transition duration-300 ease-in-out">My Account</a></div>
+                                        <div class="py-1"><a href="register.html" class="text-gray-600 font-rubic hover:text-red-600 transition duration-300 ease-in-out">Register</a></div>
+                                        <div class="py-1"><a href="login.html" class="text-gray-600 font-rubic hover:text-red-600 transition duration-300 ease-in-out">Login</a></div>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
